SDI-598: ✨ Upgrade to spring boot 3 (#1515)
* SDI-598: ✨ Upgrade to spring boot 3

* SDI-598: ✨ Initial commit of automated changes for spring boot 3

* SDI-598: ✨ Test of all caching methods

* SDI-598: ✨ Convert new test to kotlin and fix test failure

* SDI-598: ✨ Convert logback and turn off cache statistics